# swegrep-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  README_zh.md  SKILL.md  exclude.txt  include.txt  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: release-artifacts.yml
src/: cli.rs  core.rs  credentials.rs  executor.rs  lib.rs  main.rs  path_filter.rs  protobuf.rs  rg.rs
src/core/: auth.rs  credentials.rs  error.rs  http.rs  output.rs  protocol.rs  repo.rs  search.rs  tests.rs  types.rs
src/executor/: commands.rs  helpers.rs  tests.rs  tool.rs  types.rs
src/swegrep_cli/: __init__.py  cli.py  core.py  credentials.py  executor.py  protobuf.py
tests/: cli.rs  test_cli.py  test_core.py  test_executor.py  test_extract_key.py  test_key_caching.py  test_protobuf.py
