[build-system]
requires = ["hatchling>=1.27", "pathspec>=0.12.1,<1.0"]
build-backend = "hatchling.build"

[project]
name = "swegrep-cli"
version = "0.1.0"
description = "AI-powered Agentic Code Search CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
swegrep-cli = "swegrep_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swegrep_cli"]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "import-linter>=2.1",
    "mypy>=1.18.2",
    "pathspec>=0.12.1,<1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio==1.1.1",
    "ruff==0.15.12",
    "iniconfig==2.0.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
]
filterwarnings = [
    "error",
]

[tool.ruff]
line-length = 100

[tool.mypy]
# Enforce strict type checking as the primary analyzer
strict = true
python_version = "3.11"
# Relax constraints on untyped dependencies to prevent repetitive casting
disallow_untyped_calls = false
# Globally suppress missing import errors for un-stubbed packages
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".repos"]
